@@ -2,12 +2,14 @@ package com.myclinic.user.service;
 
 import com.myclinic.user.dto.UserInfoDTO;
 import com.myclinic.user.entity.User;
+import com.myclinic.user.mapper.UserMapper;
 import com.myclinic.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -21,10 +23,12 @@ public class UserService {
         return userRepository.findAll();
     }
 
+    private final UserMapper userMapper;
+    
     public UserInfoDTO getUserById(Integer userId) {
         log.info("Fetching user by ID: {}", userId);
         return userRepository.findById(userId)
-                .map(this::convertToUserInfoDTO)
+                .map(userMapper::toDto)
                 .orElse(null);
     }
     
@@ -32,30 +36,15 @@ public class UserService {
         log.info("Fetching users by IDs: {}", userIds);
         List<User> users = userRepository.findByIds(userIds);
         return users.stream()
-                .map(this::convertToUserInfoDTO)
-                .collect(Collectors.toList());
+                .map(u -> userMapper.toDto(u))
+                .toList();
     }
-    
+
     public List<UserInfoDTO> getActiveDoctors() {
         log.info("Fetching active doctors");
         List<User> doctors = userRepository.findActiveDoctors();
         return doctors.stream()
-                .map(this::convertToUserInfoDTO)
-                .collect(Collectors.toList());
-    }
-    
-    private UserInfoDTO convertToUserInfoDTO(User user) {
-        UserInfoDTO dto = new UserInfoDTO();
-        dto.setId(user.getId());
-        dto.setFullName(user.getFullName());
-        dto.setBirth(user.getBirth());
-        dto.setGender(user.getGender() != null ? user.getGender().name() : null);
-        dto.setAddress(user.getAddress());
-        dto.setEmail(user.getEmail());
-        dto.setPhone(user.getPhone());
-        dto.setAvatar(user.getAvatar());
-        dto.setRole(user.getRole() != null ? user.getRole().name() : null);
-        dto.setStatus(user.getStatus());
-        return dto;
+                .map(u -> userMapper.toDto(u))
+                .toList();
     }
 }
